build: adding test, mock, and database dependencies